fix: gap in video

--- a/css/style.scss
+++ b/css/style.scss
@@ -347,6 +347,7 @@ main{
     &__text{ margin-bottom: 20px;}
     &__name { font-size: 32px; text-align: right; }
     &__description { font-size: 24px;}
+    &__content{ padding-top: 50px;}
   }
 }
 @media(max-width: 480px){
@@ -449,6 +450,9 @@ main{
     }
     &__content{
       margin: 25px 25px 50px;
+    }
+    &__information{
+      padding-top: 50px;
     }
   }
 
@@ -1065,7 +1069,7 @@ main{
   &__content{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    row-gap: 50px;
+    row-gap: 25px;
     column-gap: 25px;
     justify-items: center;
     iframe{ width: 100%; height: 500px; border-radius: 30px;}
@@ -1082,7 +1086,7 @@ main{
     &__container{ padding: 150px 20px; }
     &__title { font-size: 48px; }
     &__content{
-      iframe{ width: 100%; height: 350px; }
+      iframe{ width: 100%; height: 250px; }
     }
   }
 }
